<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_grey_600"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/DarkTheme"
    android:weightSum="1"
    tools:context=".MainActivity">

    <com.starboy.karav.sensor.Meter.SquareView
        android:id="@+id/sq"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center">
        <!--android:layout_weight="0.38">-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <RelativeLayout
                android:id="@+id/FBLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">

                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                        android:id="@+id/ybar"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:theme="@style/DarkTheme"
                        android:thumb="@mipmap/ic_launcher"
                        app:seekBarRotation="CW270"/>
                    <!-- Rotation: CW90 or CW270 -->
                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>

                <Button
                    android:id="@+id/front"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/white_circle"
                    android:enabled="false"
                    android:text="@string/up"
                    android:textColor="@color/blue_royal"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignLeft="@+id/front"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/white_circle"
                    android:enabled="false"
                    android:text="@string/down"
                    android:textColor="@color/blue_royal"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/pitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingRight="40dp"
                    android:text="Large Text"
                    android:textColor="@color/white_alpha"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/LRLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true">

                <SeekBar
                    android:id="@+id/xbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:theme="@style/DarkTheme"
                    android:thumb="@mipmap/ic_launcher"/>

                <Button
                    android:id="@+id/left"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/white_circle"
                    android:enabled="false"
                    android:textColor="@color/blue_royal"
                    android:text="@string/left"
                    android:textSize="30sp"/>

                <Button
                    android:id="@+id/right"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/white_circle"
                    android:enabled="false"
                    android:textColor="@color/blue_royal"
                    android:text="@string/right"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/roll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingTop="50dp"
                    android:text="Large Text"
                    android:textColor="@color/white_arctic"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"/>

            </RelativeLayout>


        </RelativeLayout>
    </com.starboy.karav.sensor.Meter.SquareView>


    <android.support.v7.widget.CardView
        android:id="@+id/InfoCard"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TimeCard"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/card_margin"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:elevation="@dimen/card_elevation"
        android:paddingLeft="@dimen/card_padding"
        android:paddingRight="@dimen/card_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Calibrate"/>

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/TimeCard"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:elevation="@dimen/card_elevation"
        android:padding="@dimen/card_margin"
        android:paddingLeft="@dimen/card_padding"
        android:paddingRight="@dimen/card_padding"
        android:paddingBottom="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/chronoSize"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/c_unbalance"
                android:textColor="@color/white_pure"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/GoalCard"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/InfoCard"
        android:layout_alignLeft="@+id/InfoCard"
        android:layout_alignRight="@+id/InfoCard"
        android:elevation="@dimen/card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            >

            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeProgressBar"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:indeterminate="false"
                android:layout_alignParentTop="true"
                android:layout_alignBottom="@+id/goal"
                app:rcBackgroundColor="@color/white_pure"
                app:rcMax="100"
                app:rcProgress="90"
                app:rcRadius="0dp"/>
            <TextView
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center|center_horizontal"
                android:text="@string/goal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/goal_size"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
