<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.starboy.karav.sensor.BeforeStart.detailsetting">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        android:showDividers="middle"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/twoways"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="U/D"
                android:id="@+id/updown"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/leftright"
                android:layout_toEndOf="@+id/leftright"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L/R"
                android:id="@+id/leftright"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/oneway"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Up"
                android:id="@+id/up"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="down"
                android:id="@+id/down"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/up"
                android:layout_toEndOf="@+id/up"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="left"
                android:id="@+id/left"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/down"
                android:layout_toEndOf="@+id/down"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="right"
                android:id="@+id/right"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/left"
                android:layout_toEndOf="@+id/left"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/noway"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_above="@+id/countdown"
            android:elevation="1dp"
            android:orientation="horizontal"
            android:visibility="visible"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="@dimen/db_circle_size"
                android:layout_height="@dimen/db_circle_size"
                android:layout_marginLeft="@dimen/LevelButtonMargin"
                android:layout_marginRight="@dimen/LevelButtonMargin"
                >

                <Button
                    android:id="@+id/level1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/circle_l1"
                    android:text="@string/level_1"
                    android:textColor="@color/white_pure"
                    android:textSize="@dimen/level_textsize"
                    android:theme="@style/Base.V21.Theme.AppCompat.Light"
                    android:visibility="visible"
                    android:fontFamily="san"
                    android:paddingBottom="3dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/db_circle_size"
                android:layout_height="@dimen/db_circle_size"
                android:layout_marginLeft="@dimen/LevelButtonMargin"
                android:layout_marginRight="@dimen/LevelButtonMargin"
                >

                <Button
                    android:id="@+id/level2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/level_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/level_textsize"
                    android:theme="@style/Base.V21.Theme.AppCompat.Light"
                    android:fontFamily="san"
                    android:paddingBottom="3dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/db_circle_size"
                android:layout_height="@dimen/db_circle_size"
                android:layout_marginLeft="@dimen/LevelButtonMargin"
                android:layout_marginRight="@dimen/LevelButtonMargin"
                >

                <Button
                    android:id="@+id/level3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/level_3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/level_textsize"
                    android:theme="@style/Base.V21.Theme.AppCompat.Light"
                    android:fontFamily="san"
                    android:paddingBottom="3dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/db_circle_size"
                android:layout_height="@dimen/db_circle_size"
                android:layout_marginLeft="@dimen/LevelButtonMargin"
                android:layout_marginRight="@dimen/LevelButtonMargin"
                >

                <Button
                    android:id="@+id/level4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/level_4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/level_textsize"
                    android:theme="@style/Base.V21.Theme.AppCompat.Light"
                    android:fontFamily="san"
                    android:paddingBottom="3dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/db_circle_size"
                android:layout_height="@dimen/db_circle_size"
                android:layout_marginLeft="@dimen/LevelButtonMargin"
                android:layout_marginRight="@dimen/LevelButtonMargin"
                >

                <Button
                    android:id="@+id/level5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:text="@string/level_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/level_textsize"
                    android:theme="@style/Base.V21.Theme.AppCompat.Light"
                    android:fontFamily="san"
                    android:paddingBottom="3dp"
                    />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Still Time"
            android:id="@+id/stilltime_tv"
            android:paddingTop="@dimen/card_margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:id="@+id/stilltimeset">

            <Button
                android:id="@+id/plus_but_still"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/countdown"
                android:layout_gravity="center_horizontal"
                android:background="@color/deep_orange500"
                android:fontFamily="san"
                android:paddingEnd="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp"
                android:text="@string/plus_button"
                android:textColor="@color/white_arctic"
                android:textSize="@dimen/plus_textsize"
                android:visibility="visible"
                android:elevation="0dp"
                android:layout_alignBottom="@+id/minus_but_still"/>

            <Button
                android:id="@+id/minus_but_still"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/blue_500"
                android:fontFamily="san"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/minus_but"
                android:textColor="@color/white_arctic"
                android:textSize="@dimen/minus_textsize"
                android:visibility="visible"
                android:elevation="0dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/plus_but_still"
                android:layout_toEndOf="@+id/plus_but_still"
                android:layout_alignBottom="@+id/countdown_still"/>

            <Chronometer
                android:id="@+id/countdown_still"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:freezesText="true"
                android:gravity="right"
                android:padding="10dp"
                android:text="00:00:01"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff000000"
                android:textIsSelectable="false"
                android:textSize="@dimen/chronoSize"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Total Time"
            android:id="@+id/totaltime_tv"
            android:paddingTop="@dimen/card_margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:id="@+id/totaltimeset">

            <Button
                android:id="@+id/plus_but_total"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/countdown"
                android:layout_gravity="center_horizontal"
                android:background="@color/deep_orange500"
                android:fontFamily="san"
                android:paddingEnd="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="20dp"
                android:text="@string/plus_button"
                android:textColor="@color/white_arctic"
                android:textSize="@dimen/plus_textsize"
                android:visibility="visible"
                android:elevation="0dp"
                android:layout_alignBottom="@+id/countdown_total"/>

            <Button
                android:id="@+id/minus_but_total"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/blue_500"
                android:fontFamily="san"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/minus_but"
                android:textColor="@color/white_arctic"
                android:textSize="@dimen/minus_textsize"
                android:visibility="visible"
                android:elevation="0dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/plus_but_total"
                android:layout_toEndOf="@+id/plus_but_total"
                android:layout_alignBottom="@+id/plus_but_total"/>

            <Chronometer
                android:id="@+id/countdown_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:freezesText="true"
                android:gravity="right"
                android:padding="10dp"
                android:text="00:00:01"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff000000"
                android:textIsSelectable="false"
                android:textSize="@dimen/chronoSize"/>

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
